# IntelliOptics-Edge

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONFIGURING-DETECTORS.md  Dockerfile  INSTALL-JETSON.md  Makefile  README.md  _branch_inventory.csv  balena.yml  deploy_balena.sh  pyproject.toml
.github/workflows/: auto-format.yaml  build-push-ee-image.yaml  edge-build-push.yml  format-lite.yaml  pipeline.yaml  release.yaml  sweeper-eeut.yaml  test-k3s-helm.yaml  validate-workflow-files.yaml
_inventory/: image_refs_after.txt  image_refs_detailed.tsv  image_refs_summary.txt  pkg_named_groundlight.txt  rebrand_api_url_changed.txt  refs_aws.txt  refs_groundlight.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  app_state.py  configs.py  deviceid.py  edge_inference.py  file_paths.py  utils.py
app/escalation_queue/: __init__.py  constants.py  manage_reader.py  queue_utils.py  request_cache.py
app/metrics/: __init__.py  iq_activity.py  metric_reporting.py
app/model_updater/: __init__.py
app/schemas/: __init__.py
app/streaming/: rtsp_ingest.py
cicd/pulumi/: Pulumi.yaml  README.md  __main__.py  fabfile.py  pyproject.toml  ssh-to-eeut.sh  sweep-destroy-eeut-stacks.sh
configs/: edge-config.yaml  nginx.conf
deploy/: README.md
docs/: ci.md  cloud-stream-workflow.md
images/: README.md
intellioptics/: __init__.py
licenses/: NOTICE  THIRD_PARTY_LICENSES.md
openapi/: edge-endpoint-inline.json
test/: setup_plain_test_env.sh  test_auth.py
(+182 files in other folders)
