[project]
name = "pulumi-ee-cicd"
version = "0.1.0"
description = "Pulumi code for Edge Endpoint CI/CD"
requires-python = ">=3.10"
dependencies = [
    "pulumi>=3",
    "pulumi-aws>=6.13.3",
    "groundlight>=0.22.6, <0.23.0",
    "fabric>=3.2.2",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
]
